fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,6 @@ nav:hover{
     background-color: rgb(0, 0, 0, 0.7) !important;
 }
 
-@media screen and (max-width: 970px) { /* Change collapse bg color on mobile */
-    .navbar-collapse
-      {
-          background-color:#000;
-      }
-}
-
 /* Intro */
 
 #intro{
@@ -108,5 +101,19 @@ nav:hover{
     }
     #intro > div > p{
         font-size: 2rem;
+    }
+}
+
+/* For upto md display */
+
+@media screen and (max-width: 768px) { /* Change collapse bg color on mobile */
+    .navbar-collapse
+    {
+        background-color:#000;
+    }
+    .img-logo{
+        margin: 1rem 2rem;
+        height: 6rem;
+        width: 6rem;
     }
 }
